welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:2: error: illegal start of simple expression
while() {
      ^DwarfCode:16: error: ')' expected but '}' found.
	}
        ^