welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while() {

	
	while(!estSurBiscuit()) {
		avance();
		if(estSurBiscuit()){
			prendBiscuit();
		}
		retourne();
		avance();
		
	}
}